--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-12
+Run date: 2018-11-20
 <br>Student User: jadenngo13
 <br>Project: think-java
 <br>
@@ -66,8 +66,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 69
-	You were off by: 56
+	The number I was thinking of was: 58
+	You were off by: 45
 	
 <--
 	[OUTPUT OK]
@@ -127,19 +127,94 @@ Enter a number: Your guess is: 13
 	[OUTPUT OK]
 
 [COMPILING] Exercise5.java
-	[ERROR] javac failed Exercise5.java Exercise5.java:11: error: cannot find symbol
-			wordLower = wordLower.reaplaceAll("[^a-zA-Z0-9]", "");
-			                     ^
-	  symbol:   method reaplaceAll(String,String)
-	  location: variable wordLower of type String
-	1 error
+	[SUCCESSFUL COMPILE] Exercise5.java
+[TESTING WITH] Ch6Ex5
+[COMPILING] Ch6Ex5.java
+	[SUCCESSFUL COMPILE] Ch6Ex5.java
+[RUNNING] Ch6Ex5
+-->
+index of letter a :0
+	index of letter b :1
+	index of letter c :2
+	index of letter d :3
+	index of letter e :4
+	index of letter f :5
+	index of letter a :0
+	index of letter a :0
+	index of letter a :0
+	index of letter n :13
+	index of letter n :13
+	index of letter a :0
+	index of letter a :0
+	index of letter b :1
+	index of letter c :2
+	index of letter d :3
+	index of letter a :0
+	index of letter b :1
+	index of letter c :2
+	index of letter d :3
+	index of letter a :0
+	index of letter a :0
+	index of letter a :0
+	index of letter i :8
+	index of letter n :13
+	index of letter t :19
+	index of letter e :4
+	index of letter s :18
+	index of letter t :19
+	index of letter i :8
+	index of letter n :13
+	index of letter e :4
+	index of letter s :18
+	index of letter i :8
+	index of letter c :2
+	index of letter o :14
+	index of letter o :14
+	index of letter k :10
+	index of letter c :2
+	index of letter r :17
+	index of letter e :4
+	index of letter p :15
+	index of letter e :4
+	index of letter s :18
+	index of letter o :14
+	index of letter n :13
+	index of letter s :18
+	index of letter u :20
+	index of letter n :13
+	index of letter d :3
+	index of letter a :0
+	index of letter y :24
+	index of letter s :18
+	index of letter b :1
+	index of letter a :0
+	index of letter n :13
+	index of letter n :13
+	index of letter a :0
+	index of letter b :1
 	
+	<br>Results for Exercise5().isDoubloon()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.isDoubloon("abcdef")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("aa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("anna")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("abcdabcd")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("aaa")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("intestines")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("i cook crepes on sundays!")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.isDoubloon("Bannab")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] 
 	['Exercise4: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.'
-	 'Exercise5: COMPILE ERROR (- 0.30)']
+	 'Exercise5: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.65</b>
+<b>          [SCORE] <font color="green">0.95</font></b>
 
 <hr>
 
@@ -295,111 +370,402 @@ TestCh7Ex4.java:47: error: cannot find symbol
 	[OUTPUT OK]
 
 [COMPILING] Exercise8.java
-	[ERROR] javac failed Exercise8.java Exercise8.java:3: error: illegal start of expression
-	<<<<<<< HEAD
-	^
-	Exercise8.java:3: error: illegal start of expression
-	<<<<<<< HEAD
-	  ^
-	Exercise8.java:3: error: illegal start of expression
-	<<<<<<< HEAD
-	    ^
-	Exercise8.java:4: error: > expected
-			String word1 = "spo t";
-			^
-	Exercise8.java:4: error: ';' expected
-			String word1 = "spo t";
-			      ^
-	Exercise8.java:4: error: illegal start of expression
-			String word1 = "spo t";
-			             ^
-	Exercise8.java:4: error: ';' expected
-			String word1 = "spo t";
-			              ^
-	Exercise8.java:6: error: illegal start of expression
-	=======
-	^
-	Exercise8.java:6: error: illegal start of expression
-	=======
-	  ^
-	Exercise8.java:6: error: illegal start of expression
-	=======
-	    ^
-	Exercise8.java:6: error: illegal start of expression
-	=======
-	      ^
-	Exercise8.java:7: error: ';' expected
-			String word1 = "flip";
-			      ^
-	Exercise8.java:9: error: illegal start of expression
-	>>>>>>> b07621352b0e5b815b3ea0eea09d48bd2b36c77c
-	^
-	Exercise8.java:9: error: illegal start of expression
-	>>>>>>> b07621352b0e5b815b3ea0eea09d48bd2b36c77c
-	   ^
-	Exercise8.java:9: error: illegal start of expression
-	>>>>>>> b07621352b0e5b815b3ea0eea09d48bd2b36c77c
-	      ^
-	Exercise8.java:9: error: ';' expected
-	>>>>>>> b07621352b0e5b815b3ea0eea09d48bd2b36c77c
-	                                                ^
-	Exercise8.java:14: error: illegal start of expression
-	<<<<<<< HEAD
-	^
-	Exercise8.java:14: error: illegal start of expression
-	<<<<<<< HEAD
-	  ^
-	Exercise8.java:14: error: illegal start of expression
-	<<<<<<< HEAD
-	    ^
-	Exercise8.java:15: error: > expected
-			str1 = str1.replace(" ", "");
-			^
-	Exercise8.java:27: error: illegal start of expression
-	=======
-	^
-	Exercise8.java:27: error: illegal start of expression
-	=======
-	  ^
-	Exercise8.java:27: error: illegal start of expression
-	=======
-	    ^
-	Exercise8.java:27: error: illegal start of expression
-	=======
-	      ^
-	Exercise8.java:28: error: '.class' expected
-			boolean anagram = true;
-			        ^
-	Exercise8.java:28: error: illegal start of expression
-			boolean anagram = true;
-			                ^
-	Exercise8.java:28: error: ';' expected
-			boolean anagram = true;
-			                 ^
-	Exercise8.java:40: error: illegal start of expression
-	>>>>>>> b07621352b0e5b815b3ea0eea09d48bd2b36c77c
-	^
-	Exercise8.java:40: error: illegal start of expression
-	>>>>>>> b07621352b0e5b815b3ea0eea09d48bd2b36c77c
-	   ^
-	Exercise8.java:40: error: illegal start of expression
-	>>>>>>> b07621352b0e5b815b3ea0eea09d48bd2b36c77c
-	      ^
-	Exercise8.java:40: error: ';' expected
-	>>>>>>> b07621352b0e5b815b3ea0eea09d48bd2b36c77c
-	                                                ^
-	Exercise8.java:64: error: reached end of file while parsing
-	}
-	 ^
-	32 errors
+	[SUCCESSFUL COMPILE] Exercise8.java
+[TESTING WITH] TestCh7Ex8
+[COMPILING] TestCh7Ex8.java
+	[SUCCESSFUL COMPILE] TestCh7Ex8.java
+[RUNNING] TestCh7Ex8
+-->
+letter: s
+	index of letter: 18
+	letter: t
+	index of letter: 19
+	letter: o
+	index of letter: 14
+	letter: p
+	index of letter: 15
+	letter: m
+	index of letter: 12
+	letter: o
+	index of letter: 14
+	letter: t
+	index of letter: 19
+	letter: s
+	index of letter: 18
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 1
+	0 vs. 0
+	1 vs. 1
+	1 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	letter: s
+	index of letter: 18
+	letter: t
+	index of letter: 19
+	letter: o
+	index of letter: 14
+	letter: p
+	index of letter: 15
+	letter: p
+	index of letter: 15
+	letter: o
+	index of letter: 14
+	letter: t
+	index of letter: 19
+	letter: s
+	index of letter: 18
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	letter: a
+	index of letter: 0
+	letter: l
+	index of letter: 11
+	letter: l
+	index of letter: 11
+	letter: e
+	index of letter: 4
+	letter: n
+	index of letter: 13
+	letter: d
+	index of letter: 3
+	letter: o
+	index of letter: 14
+	letter: w
+	index of letter: 22
+	letter: n
+	index of letter: 13
+	letter: e
+	index of letter: 4
+	letter: y
+	index of letter: 24
+	letter: w
+	index of letter: 22
+	letter: e
+	index of letter: 4
+	letter: l
+	index of letter: 11
+	letter: l
+	index of letter: 11
+	letter: a
+	index of letter: 0
+	letter: n
+	index of letter: 13
+	letter: n
+	index of letter: 13
+	letter: o
+	index of letter: 14
+	letter: y
+	index of letter: 24
+	letter: e
+	index of letter: 4
+	letter: d
+	index of letter: 3
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	2 vs. 2
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	2 vs. 2
+	0 vs. 0
+	2 vs. 2
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	letter: f
+	index of letter: 5
+	letter: l
+	index of letter: 11
+	letter: i
+	index of letter: 8
+	letter: p
+	index of letter: 15
+	letter: f
+	index of letter: 5
+	letter: l
+	index of letter: 11
+	letter: o
+	index of letter: 14
+	letter: p
+	index of letter: 15
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	1 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: h
+	index of letter: 7
+	letter: b
+	index of letter: 1
+	letter: o
+	index of letter: 14
+	letter: y
+	index of letter: 24
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: h
+	index of letter: 7
+	letter: b
+	index of letter: 1
+	letter: o
+	index of letter: 14
+	letter: y
+	index of letter: 24
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	7 vs. 7
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: h
+	index of letter: 7
+	letter: b
+	index of letter: 1
+	letter: o
+	index of letter: 14
+	letter: y
+	index of letter: 24
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: o
+	index of letter: 14
+	letter: h
+	index of letter: 7
+	letter: b
+	index of letter: 1
+	letter: o
+	index of letter: 14
+	letter: y
+	index of letter: 24
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	7 vs. 7
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	letter: n
+	index of letter: 13
+	letter: o
+	index of letter: 14
+	letter: w
+	index of letter: 22
+	letter: w
+	index of letter: 22
+	letter: o
+	index of letter: 14
+	letter: n
+	index of letter: 13
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
 	
+	<br>Chapter7, Exercise8.isAnagram()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise8.isAnagram("stop, mots")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("stop, pots")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("allen downey, well annoyed")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("flip, flop")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("ooooooh boy, oooooo hboy")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("oooooo hboy, ooooooh boy")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("now, won")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("larp test, lightning bolt")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] 
 	['Exercise5: PASSED - EXCELLENT!'
 	 'Exercise6: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.'
-	 'Exercise8: COMPILE ERROR (- 0.30)']
+	 'Exercise8: PASSED - EXCELLENT!']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.67</b>
+<b>          [SCORE] <font color="green">0.97</font></b>
 
 <hr>
 
@@ -414,82 +780,22 @@ TestCh7Ex4.java:47: error: cannot find symbol
 [COMPILING] TestTile.java
 	[ERROR] javac failed TestTile.java
  ----begin compile output------- 
-TestTile.java:58: error: cannot find symbol
-	                if( c != t.getLetter()){
-	                          ^
-	  symbol:   method getLetter()
-	  location: variable t of type Tile
-	TestTile.java:60: error: cannot find symbol
-	                    addResult("getLetter", "", ""+t.getLetter(), ""+c, false);
-	                                                   ^
-	  symbol:   method getLetter()
-	  location: variable t of type Tile
-	TestTile.java:62: error: cannot find symbol
-	                    addResult("getLetter", "", ""+t.getLetter(), ""+c, true);
-	                                                   ^
-	  symbol:   method getLetter()
-	  location: variable t of type Tile
-	TestTile.java:65: error: cannot find symbol
-	                if( value != t.getValue()){
-	                              ^
-	  symbol:   method getValue()
-	  location: variable t of type Tile
-	TestTile.java:67: error: cannot find symbol
-	                    addResult("getValue", "", ""+t.getValue(), ""+value, false);
-	                                                  ^
-	  symbol:   method getValue()
-	  location: variable t of type Tile
-	TestTile.java:69: error: cannot find symbol
-	                    addResult("getValue", "", ""+t.getValue(), ""+value, true);
-	                                                  ^
-	  symbol:   method getValue()
-	  location: variable t of type Tile
-	TestTile.java:72: error: cannot find symbol
+TestTile.java:72: error: cannot find symbol
 	                t.setLetter('A');
 	                 ^
 	  symbol:   method setLetter(char)
-	  location: variable t of type Tile
-	TestTile.java:73: error: cannot find symbol
-	                if( t.getLetter() != 'A'){
-	                     ^
-	  symbol:   method getLetter()
-	  location: variable t of type Tile
-	TestTile.java:75: error: cannot find symbol
-	                    addResult("setLetter", "'A'", ""+t.getLetter(), "'A'", false);
-	                                                      ^
-	  symbol:   method getLetter()
-	  location: variable t of type Tile
-	TestTile.java:77: error: cannot find symbol
-	                    addResult("setLetter", "'A'", ""+t.getLetter(), "'A'", true);
-	                                                      ^
-	  symbol:   method getLetter()
 	  location: variable t of type Tile
 	TestTile.java:80: error: cannot find symbol
 	                t.setValue(8);
 	                 ^
 	  symbol:   method setValue(int)
 	  location: variable t of type Tile
-	TestTile.java:81: error: cannot find symbol
-	                if( t.getValue() != 8){
-	                     ^
-	  symbol:   method getValue()
-	  location: variable t of type Tile
-	TestTile.java:83: error: cannot find symbol
-	                    addResult("getValue", "", ""+t.getValue(), "8", false);
-	                                                  ^
-	  symbol:   method getValue()
-	  location: variable t of type Tile
-	TestTile.java:85: error: cannot find symbol
-	                    addResult("getValue", "", ""+t.getValue(), "8", true);
-	                                                  ^
-	  symbol:   method getValue()
-	  location: variable t of type Tile
 	TestTile.java:133: error: cannot find symbol
 	                t2.setValue(value + 5);
 	                  ^
 	  symbol:   method setValue(int)
 	  location: variable t2 of type Tile
-	15 errors
+	3 errors
 	
 -----------END COMPILE-------
 [SUMMARY] 
