--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-12
+Run date: 2018-11-20
 <br>Student User: aliyaaware
 <br>Project: think-java
 <br>
@@ -64,8 +64,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 94
-	You were off by: 81
+	THe number I was thinkin of is: 98
+	You were off by: 85
 	
 <--
 	[OUTPUT OK]
@@ -380,34 +380,31 @@ Im thinking of a number between 1-100, can you guess it?
 	[SUCCESSFUL COMPILE] Tile.java
 [TESTING WITH] TestTile
 [COMPILING] TestTile.java
-	[SUCCESSFUL COMPILE] TestTile.java
-[RUNNING] TestTile
--->
-
-	<br>Chapter11, Exercise3: Tile Class
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">new Tile()("C, 3")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">new Tile()("Z, 10")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getLetter("")  </td><td align="left">C</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getValue("")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getLetter("")  </td><td align="left">Z</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getValue("")  </td><td align="left">10</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">toString("")  </td><td align="left">A tile with Z and 10</td><td bgcolor="red"><b>Z - 10 </b></td></tr>
-	<tr><td align="right" width="200">equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">!equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
-	[deductions=0.05]
+	[ERROR] javac failed TestTile.java
+ ----begin compile output------- 
+TestTile.java:38: error: incompatible types: possible lossy conversion from int to char
+	            Tile t = new Tile(c, value);        
+	                                 ^
+	TestTile.java:56: error: incompatible types: possible lossy conversion from int to char
+	            Tile t = new Tile(c, value);        
+	                                 ^
+	TestTile.java:100: error: incompatible types: possible lossy conversion from int to char
+	            Tile t = new Tile(c, value);        
+	                                 ^
+	TestTile.java:122: error: incompatible types: possible lossy conversion from int to char
+	            Tile t = new Tile(c, value);
+	                                 ^
+	TestTile.java:123: error: incompatible types: possible lossy conversion from int to char
+	            Tile t2 = new Tile(c, value);        
+	                                  ^
+	Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
+	5 errors
 	
-	
-<--
-	[OUTPUT OK]
-
+-----------END COMPILE-------
 [SUMMARY] 
-	['Tile: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
+	['Tile: COMPILE ERROR (- 0.30)']
 [DONE chapter11]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] <font color="green">0.95</font></b>
+<b>          [SCORE] 0.70</b>
 
 </pre></body></html>
