--- a/stureports/think-java/banjojeebus.think-java_results.html
+++ b/stureports/think-java/banjojeebus.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-12
+Run date: 2018-11-20
 <br>Student User: banjojeebus
 <br>Project: think-java
 <br>
@@ -100,10 +100,33 @@ Seconds remaining: 39870
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-	[ERROR] No chapter work for:chapter7
+[COMPILING] Exercise3.java
+	[ERROR] javac failed Exercise3.java Exercise3.java:6: error: cannot find symbol
+			for(i = 0; i < array.length(); i ++){
+			    ^
+	  symbol:   variable i
+	  location: class Exercise3
+	Exercise3.java:6: error: cannot find symbol
+			for(i = 0; i < array.length(); i ++){
+			           ^
+	  symbol:   variable i
+	  location: class Exercise3
+	Exercise3.java:6: error: int cannot be dereferenced
+			for(i = 0; i < array.length(); i ++){
+			                    ^
+	Exercise3.java:6: error: cannot find symbol
+			for(i = 0; i < array.length(); i ++){
+			                               ^
+	  symbol:   variable i
+	  location: class Exercise3
+	4 errors
+	
+[SUMMARY] 
+	['Exercise3: COMPILE ERROR (- 0.30)'
+	 'Exercise4: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.20</b>
 
 <hr>
 
@@ -112,10 +135,13 @@ Seconds remaining: 39870
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-	[ERROR] No chapter work for:chapter7
+[SUMMARY] 
+	['Exercise5: MISSING (- 0.50)'
+	 'Exercise6: MISSING (- 0.50)'
+	 'Exercise8: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
@@ -124,9 +150,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter11]
   [EXPECTING TARGETS] ['Tile']
-	[ERROR] No chapter work for:chapter11
+[SUMMARY] 
+	['Tile: MISSING (- 0.50)']
 [DONE chapter11]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.50</b>
 
 </pre></body></html>
