--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-12
+Run date: 2018-11-20
 <br>Student User: tpipitone
 <br>Project: think-java
 <br>
@@ -69,7 +69,7 @@ How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
 -->
 Guess my number between 1 and 100!
 	Type a number: Your guess is: 13
-	My number was 76. You were off by 63.
+	My number was 90. You were off by 77.
 	
 <--
 	[OUTPUT OK]
@@ -362,10 +362,94 @@ Ch 4 Multadd
 
 *[BEGIN chapter11]
   [EXPECTING TARGETS] ['Tile']
+[COMPILING] Tile.java
+	[SUCCESSFUL COMPILE] Tile.java
+[TESTING WITH] TestTile
+[COMPILING] TestTile.java
+	[ERROR] javac failed TestTile.java
+ ----begin compile output------- 
+TestTile.java:58: error: cannot find symbol
+	                if( c != t.getLetter()){
+	                          ^
+	  symbol:   method getLetter()
+	  location: variable t of type Tile
+	TestTile.java:60: error: cannot find symbol
+	                    addResult("getLetter", "", ""+t.getLetter(), ""+c, false);
+	                                                   ^
+	  symbol:   method getLetter()
+	  location: variable t of type Tile
+	TestTile.java:62: error: cannot find symbol
+	                    addResult("getLetter", "", ""+t.getLetter(), ""+c, true);
+	                                                   ^
+	  symbol:   method getLetter()
+	  location: variable t of type Tile
+	TestTile.java:65: error: cannot find symbol
+	                if( value != t.getValue()){
+	                              ^
+	  symbol:   method getValue()
+	  location: variable t of type Tile
+	TestTile.java:67: error: cannot find symbol
+	                    addResult("getValue", "", ""+t.getValue(), ""+value, false);
+	                                                  ^
+	  symbol:   method getValue()
+	  location: variable t of type Tile
+	TestTile.java:69: error: cannot find symbol
+	                    addResult("getValue", "", ""+t.getValue(), ""+value, true);
+	                                                  ^
+	  symbol:   method getValue()
+	  location: variable t of type Tile
+	TestTile.java:72: error: cannot find symbol
+	                t.setLetter('A');
+	                 ^
+	  symbol:   method setLetter(char)
+	  location: variable t of type Tile
+	TestTile.java:73: error: cannot find symbol
+	                if( t.getLetter() != 'A'){
+	                     ^
+	  symbol:   method getLetter()
+	  location: variable t of type Tile
+	TestTile.java:75: error: cannot find symbol
+	                    addResult("setLetter", "'A'", ""+t.getLetter(), "'A'", false);
+	                                                      ^
+	  symbol:   method getLetter()
+	  location: variable t of type Tile
+	TestTile.java:77: error: cannot find symbol
+	                    addResult("setLetter", "'A'", ""+t.getLetter(), "'A'", true);
+	                                                      ^
+	  symbol:   method getLetter()
+	  location: variable t of type Tile
+	TestTile.java:80: error: cannot find symbol
+	                t.setValue(8);
+	                 ^
+	  symbol:   method setValue(int)
+	  location: variable t of type Tile
+	TestTile.java:81: error: cannot find symbol
+	                if( t.getValue() != 8){
+	                     ^
+	  symbol:   method getValue()
+	  location: variable t of type Tile
+	TestTile.java:83: error: cannot find symbol
+	                    addResult("getValue", "", ""+t.getValue(), "8", false);
+	                                                  ^
+	  symbol:   method getValue()
+	  location: variable t of type Tile
+	TestTile.java:85: error: cannot find symbol
+	                    addResult("getValue", "", ""+t.getValue(), "8", true);
+	                                                  ^
+	  symbol:   method getValue()
+	  location: variable t of type Tile
+	TestTile.java:133: error: cannot find symbol
+	                t2.setValue(value + 5);
+	                  ^
+	  symbol:   method setValue(int)
+	  location: variable t2 of type Tile
+	15 errors
+	
+-----------END COMPILE-------
 [SUMMARY] 
-	['Tile: MISSING (- 0.50)']
+	['Tile: COMPILE ERROR (- 0.30)']
 [DONE chapter11]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.70</b>
 
 </pre></body></html>
