--- a/stureports/think-java/ReidLuhn.think-java_results.html
+++ b/stureports/think-java/ReidLuhn.think-java_results.html
@@ -66,8 +66,8 @@ Enter seconds: That is 0 hours, 0 minutes, and 13 seconds.
 -->
 I'm thinking of a number between 1 and 100, can you guess it?
 	Your guess is: 13
-	My number was: 82
-	You were off by: 69
+	My number was: 77
+	You were off by: 64
 <--
 	[OUTPUT OK]
 
@@ -358,17 +358,17 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 	<br>Chapter11, Exercise3: Tile Class
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">new Tile()("C, 3")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">new Tile()("Z, 10")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getLetter("")  </td><td align="left">C</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getValue("")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getLetter("")  </td><td align="left">Z</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getValue("")  </td><td align="left">10</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">toString("")  </td><td align="left">Z - 10</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">!equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[C - 3 ].getLetter("")  </td><td align="left">C</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[C - 3 ].getValue("")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[A - 3 ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[A - 8 ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Z - 10 ].getLetter("")  </td><td align="left">Z</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Z - 10 ].getValue("")  </td><td align="left">10</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[A - 10 ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[A - 8 ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Z - 10 ].toString("")  </td><td align="left">Z - 10</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Z - 3 ].equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Z - 3 ].!equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
 	[deductions=0.0]
 	
 	
