--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -69,7 +69,7 @@ How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
 -->
 Guess my number between 1 and 100!
 	Type a number: Your guess is: 13
-	My number was 90. You were off by 77.
+	My number was 96. You were off by 83.
 	
 <--
 	[OUTPUT OK]
@@ -374,13 +374,13 @@ TestTile.java:58: error: cannot find symbol
 	  symbol:   method getLetter()
 	  location: variable t of type Tile
 	TestTile.java:60: error: cannot find symbol
-	                    addResult("getLetter", "", ""+t.getLetter(), ""+c, false);
-	                                                   ^
+	                    addResult("Tile[" + t.toString() +" ].getLetter", "", ""+t.getLetter(), ""+c, false);
+	                                                                              ^
 	  symbol:   method getLetter()
 	  location: variable t of type Tile
 	TestTile.java:62: error: cannot find symbol
-	                    addResult("getLetter", "", ""+t.getLetter(), ""+c, true);
-	                                                   ^
+	                    addResult("Tile[" + t.toString() +" ].getLetter", "", ""+t.getLetter(), ""+c, true);
+	                                                                              ^
 	  symbol:   method getLetter()
 	  location: variable t of type Tile
 	TestTile.java:65: error: cannot find symbol
@@ -389,13 +389,13 @@ TestTile.java:58: error: cannot find symbol
 	  symbol:   method getValue()
 	  location: variable t of type Tile
 	TestTile.java:67: error: cannot find symbol
-	                    addResult("getValue", "", ""+t.getValue(), ""+value, false);
-	                                                  ^
+	                    addResult("Tile[" + t.toString() +" ].getValue", "", ""+t.getValue(), ""+value, false);
+	                                                                             ^
 	  symbol:   method getValue()
 	  location: variable t of type Tile
 	TestTile.java:69: error: cannot find symbol
-	                    addResult("getValue", "", ""+t.getValue(), ""+value, true);
-	                                                  ^
+	                    addResult("Tile[" + t.toString() +" ].getValue", "", ""+t.getValue(), ""+value, true);
+	                                                                             ^
 	  symbol:   method getValue()
 	  location: variable t of type Tile
 	TestTile.java:72: error: cannot find symbol
@@ -409,13 +409,13 @@ TestTile.java:58: error: cannot find symbol
 	  symbol:   method getLetter()
 	  location: variable t of type Tile
 	TestTile.java:75: error: cannot find symbol
-	                    addResult("setLetter", "'A'", ""+t.getLetter(), "'A'", false);
-	                                                      ^
+	                    addResult("Tile[" + t.toString() +" ].setLetter", "'A'", ""+t.getLetter(), "'A'", false);
+	                                                                                 ^
 	  symbol:   method getLetter()
 	  location: variable t of type Tile
 	TestTile.java:77: error: cannot find symbol
-	                    addResult("setLetter", "'A'", ""+t.getLetter(), "'A'", true);
-	                                                      ^
+	                    addResult("Tile[" + t.toString() +" ].setLetter", "'A'", ""+t.getLetter(), "'A'", true);
+	                                                                                 ^
 	  symbol:   method getLetter()
 	  location: variable t of type Tile
 	TestTile.java:80: error: cannot find symbol
@@ -429,13 +429,13 @@ TestTile.java:58: error: cannot find symbol
 	  symbol:   method getValue()
 	  location: variable t of type Tile
 	TestTile.java:83: error: cannot find symbol
-	                    addResult("getValue", "", ""+t.getValue(), "8", false);
-	                                                  ^
+	                    addResult("Tile[" + t.toString() +" ].getValue", "", ""+t.getValue(), "8", false);
+	                                                                             ^
 	  symbol:   method getValue()
 	  location: variable t of type Tile
 	TestTile.java:85: error: cannot find symbol
-	                    addResult("getValue", "", ""+t.getValue(), "8", true);
-	                                                  ^
+	                    addResult("Tile[" + t.toString() +" ].getValue", "", ""+t.getValue(), "8", true);
+	                                                                             ^
 	  symbol:   method getValue()
 	  location: variable t of type Tile
 	TestTile.java:133: error: cannot find symbol
